--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "dependencies": {
         "@types/morgan": "^1.9.9",
+        "bcrypt": "^5.1.1",
         "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
         "express": "^4.21.1",
@@ -30,6 +31,7 @@
         "winston": "^3.15.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/express": "^5.0.0",
         "@types/express-ejs-layouts": "^2.5.4",
         "@types/express-mysql-session": "^3.0.6",
@@ -37,6 +39,7 @@
         "@types/node": "^22.7.9",
         "concurrently": "^9.0.1",
         "nodemon": "^3.1.7",
+        "npm": "^10.9.0",
         "prettier": "3.3.3",
         "ts-node": "^10.9.2",
         "tsc-alias": "^1.8.10",
