--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "express-session": "^1.18.1",
         "glob": "^11.0.0",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "mysql": "npm:mysql2@^3.11.3",
         "reflect-metadata": "^0.2.2",
         "sass-middleware": "^0.0.3",
@@ -36,6 +37,7 @@
         "@types/express-ejs-layouts": "^2.5.4",
         "@types/express-mysql-session": "^3.0.6",
         "@types/express-session": "^1.18.0",
+        "@types/multer": "^1.4.12",
         "@types/node": "^22.7.9",
         "concurrently": "^9.0.1",
         "nodemon": "^3.1.7",
