--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
         "express-ejs-layouts": "^2.5.1",
         "express-mysql-session": "^3.0.3",
         "express-session": "^1.18.1",
+        "express-vue": "^5.16.0",
         "glob": "^11.0.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "mysql": "npm:mysql2@^3.11.3",
         "reflect-metadata": "^0.2.2",
         "sass-middleware": "^0.0.3",
+        "ts-loader": "^9.5.1",
         "tsconfig-paths": "^4.2.0",
         "typeorm": "^0.3.20",
+        "vue": "^2.7.16",
         "winston": "^3.15.0"
     },
     "devDependencies": {
@@ -39,12 +42,18 @@
         "@types/express-session": "^1.18.0",
         "@types/multer": "^1.4.12",
         "@types/node": "^22.7.9",
+        "@types/webpack-node-externals": "^3.0.4",
         "concurrently": "^9.0.1",
+        "css-loader": "^7.1.2",
         "nodemon": "^3.1.7",
         "npm": "^10.9.0",
         "prettier": "3.3.3",
         "ts-node": "^10.9.2",
         "tsc-alias": "^1.8.10",
-        "typescript": "^5.6.3"
+        "typescript": "^5.6.3",
+        "vue-loader": "^15.10.0",
+        "vue-style-loader": "^4.1.3",
+        "vue-tsc": "^2.1.8",
+        "webpack": "^4.47.0"
     }
 }
