--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "description": "",
     "main": "dist/index.js",
     "scripts": {
-        "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+        "build": "npm run build:client && npm run build:server",
         "start": "node dist/index.js",
-        "dev": "nodemon",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "npm run build:client && npm run build:server && node dist/server/bundle.server.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build:client": "webpack --config webpack.client.js ",
+        "build:server": "webpack --config webpack.server.js "
     },
     "keywords": [],
     "author": "",
@@ -15,13 +17,13 @@
     "dependencies": {
         "@types/morgan": "^1.9.9",
         "bcrypt": "^5.1.1",
+        "circular-dependency-plugin": "^5.2.2",
         "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
         "express": "^4.21.1",
         "express-ejs-layouts": "^2.5.1",
         "express-mysql-session": "^3.0.3",
         "express-session": "^1.18.1",
-        "express-vue": "^5.16.0",
         "glob": "^11.0.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
@@ -31,7 +33,12 @@
         "ts-loader": "^9.5.1",
         "tsconfig-paths": "^4.2.0",
         "typeorm": "^0.3.20",
-        "vue": "^2.7.16",
+        "vue": "^3.5.12",
+        "vue-router": "^4.4.5",
+        "vuex": "^4.1.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-merge": "^6.0.1",
+        "webpack-node-externals": "^3.0.0",
         "winston": "^3.15.0"
     },
     "devDependencies": {
@@ -45,15 +52,14 @@
         "@types/webpack-node-externals": "^3.0.4",
         "concurrently": "^9.0.1",
         "css-loader": "^7.1.2",
-        "nodemon": "^3.1.7",
         "npm": "^10.9.0",
         "prettier": "3.3.3",
         "ts-node": "^10.9.2",
         "tsc-alias": "^1.8.10",
         "typescript": "^5.6.3",
-        "vue-loader": "^15.10.0",
+        "vue-loader": "^17.4.2",
         "vue-style-loader": "^4.1.3",
         "vue-tsc": "^2.1.8",
-        "webpack": "^4.47.0"
+        "webpack": "^5.95.0"
     }
 }
