--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "scripts": {
         "build": "npm run build:client && npm run build:server",
         "start": "node dist/index.js",
-        "dev": "npm run build:client && npm run build:server && node dist/server/bundle.server.js",
+        "dev": "concurrently \"npm run build:client\"  \"npm run build:server\"  \"node dist/server/bundle.server.js\"",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build:client": "webpack --config webpack.client.js ",
-        "build:server": "webpack --config webpack.server.js "
+        "build:client": "webpack --config webpack.client.js --watch",
+        "build:server": "webpack --config webpack.server.js --watch"
     },
     "keywords": [],
     "author": "",
