--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@types/morgan": "^1.9.9",
         "bcrypt": "^5.1.1",
+        "chart.js": "^4.4.6",
         "circular-dependency-plugin": "^5.2.2",
         "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
@@ -38,7 +39,6 @@
         "ts-loader": "^9.5.1",
         "tsconfig-paths": "^4.2.0",
         "typeorm": "^0.3.20",
-        "typeorm-seeding": "^1.6.1",
         "vue": "^3.5.12",
         "vue-router": "^4.4.5",
         "vuex": "^4.1.0",
@@ -64,6 +64,7 @@
         "prettier": "3.3.3",
         "ts-node": "^10.9.2",
         "tsc-alias": "^1.8.10",
+        "typeorm-seeding": "^1.6.1",
         "typescript": "^5.6.3",
         "vue-loader": "^17.4.2",
         "vue-style-loader": "^4.1.3",
