--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "express-mysql-session": "^3.0.3",
         "express-session": "^1.18.1",
         "glob": "^11.0.0",
+        "leaflet": "^1.9.4",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "mysql": "npm:mysql2@^3.11.3",
@@ -40,6 +41,7 @@
         "tsconfig-paths": "^4.2.0",
         "typeorm": "^0.3.20",
         "vue": "^3.5.12",
+        "vue-leaflet": "^0.1.0",
         "vue-router": "^4.4.5",
         "vuex": "^4.1.0",
         "webpack-cli": "^5.1.4",
