--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "tsconfig-paths": "^4.2.0",
         "typeorm": "^0.3.20",
         "vue": "^3.5.12",
+        "vue-chartjs": "^5.3.2",
         "vue-leaflet": "^0.1.0",
         "vue-router": "^4.4.5",
         "vuex": "^4.1.0",
